--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
       This should be the same across all pages.
      -->
-    <link rel="icon" href="./assets/images/1311.png" />
-		<title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+    <link rel="icon" href="./assets/images/julien_vietnam.jpeg" />
+		<title>Julien's Portfolio</title>
+    <meta name="description" content="Julien's portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="./css/layout.css">
@@ -29,9 +29,9 @@
     <div class="navbar">
       <a class="nav-title-link" href="./index.html">
         <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Julien's Portfolio</span>
          <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:phamju10@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
@@ -50,9 +50,8 @@
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
-          <img src="./assets/images/1311.png" class="portfolio-header-image">
-          <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
-            <span class="image-caption">Unemployables #1311</span>
+          <img src="./assets/images/julien_vietnam.jpeg" class="portfolio-header-image">
+            <span class="image-caption">Julien in Đà Nẵng, Việt Nam</span>
           </a>
         </div>
 
@@ -65,8 +64,8 @@
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">Hey, I'm @ndoherty_eth.</span>
-              <div class="body-text">I’m a freelance designer and developer who aims to help other creatives build out their portfolios, skillset, and businesses.</div>
+              <span class="main-title">Hey, I'm Julien PHAM.</span>
+              <div class="body-text">I’m a Data Science intern with a master's degree in Applied Mathematics. I’m naturally curious and enjoy learning new things every day.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
