--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm Julien PHAM.</span>
-              <div class="body-text">I’m a Data Science intern with a master's degree in Applied Mathematics. I’m naturally curious and enjoy learning new things every day.</div>
+              <div class="body-text">I’m a Data Scientist. I’m naturally curious and enjoy learning new things every day.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -84,8 +84,12 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">
+		I hold a Master’s degree in Applied Mathematics, where I developed a strong foundation in analytical thinking, modeling, and statistical methods.  
+      		My academic journey has fueled a deep interest in data science and artificial intelligence, fields in which I continuously seek to expand my knowledge and skills.  
+      		This portfolio presents a selection of projects that I am particularly proud of, reflecting both my technical abilities and my passion for solving complex problems through data.  
+      		Driven by curiosity, I welcome new challenges that allow me to grow professionally and personally. </div>
+          <div class="body-text">If you would like to discuss potential collaborations, request my CV, or simply connect, please feel free to reach out via email. I look forward to hearing from you.</div>
         </div>
       </div>
 
