--- a/index.html
+++ b/index.html
@@ -86,10 +86,17 @@
         <div class="about-section-content">
           <div class="body-text">
 		I hold a Master’s degree in Applied Mathematics, where I developed a strong foundation in analytical thinking, modeling, and statistical methods.  
-      		My academic journey has fueled a deep interest in data science and artificial intelligence, fields in which I continuously seek to expand my knowledge and skills.  
-      		This portfolio presents a selection of projects that I am particularly proud of, reflecting both my technical abilities and my passion for solving complex problems through data.  
-      		Driven by curiosity, I welcome new challenges that allow me to grow professionally and personally. </div>
-          <div class="body-text">If you would like to discuss potential collaborations, request my CV, or simply connect, please feel free to reach out via email. I look forward to hearing from you.</div>
+      		My academic journey has fueled a deep interest in data science and artificial intelligence, fields in which I continuously seek to expand my knowledge and skills.
+	  </div>
+
+	  <div class="body-text">
+      		This portfolio presents a selection of projects that I am particularly proud of, reflecting both my technical abilities and my passion for solving complex problems.  
+	  </div>
+		
+          <div class="body-text">
+		If you would like to discuss, request my CV, or simply connect, please feel free to reach out via email. I look forward to hearing from you.
+	  </div>
+		
         </div>
       </div>
 
