--- a/project-pages/project-template.html
+++ b/project-pages/project-template.html
@@ -140,7 +140,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" target="_blank" href="https://github.com/julien-pham">
-        <image src="./assets/icons/github-mark.svg" class="footer-icon"/>
+        <image src="../assets/icons/github-mark.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change href to your Twitter account (can also delete entire "a" element if no Twitter) 
@@ -148,7 +148,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/julienpha/">
-        <image src="./assets/icons/linkedin.svg" class="footer-icon"/>
+        <image src="../assets/icons/linkedin.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
@@ -156,7 +156,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" href="mailto:phamju10@gmail.com">
-        <image src="./assets/icons/mail.svg" class="footer-icon"/>
+        <image src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
