--- a/index.html
+++ b/index.html
@@ -130,33 +130,42 @@
           -->
           <div class="project-card">
             <img src="./assets/images/desktop.jpeg" class="project-image">
-            <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
-            </div>
-            <a class="button" href="./project-pages/project-template.html">
+		<div class="project-card-text-container">
+		  <div class="subheader-text project-title">Local LLM Assistant for PDF Analysis</div>
+		  <div class="body-text project-card-text">
+		    Created a local PDF assistant using Python, TinyLlama, and Sentence Transformers. It extracts text, generates embeddings, and answers questions about PDF content—all offline without external APIs.
+		  </div>
+		</div>
+            <a class="button" href="./project-pages/project-llm.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
+		
           <div class="project-card">
-            <img src="./assets/images/code.jpeg" class="project-image">
-            <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
-            </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <img src="./assets/images/memoire_miniature.png" class="project-image">
+		<div class="project-card-text-container">
+		  <div class="subheader-text project-title">Master 1 Research Thesis: Population Dynamics Modeling</div>
+		  <div class="body-text project-card-text">
+		    Developed and analyzed mathematical models of population dynamics using Volterra-Lotka predator-prey equations coupled with the Verhulst logistic growth model. Applied stability analysis of equilibrium points and simulated scenarios to assess the impact of environmental and fishing pressures.
+		    Tools used included Python for numerical simulations and visualization.
+		  </div>
+		</div>
+            <a class="button" href="./project-pages/project-memoire.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
+		
           <div class="project-card">
-            <img src="./assets/images/sketchbook.jpeg" class="project-image">
-            <div class="project-card-text-container">
-              <div class="subheader-text project-title">Super Long Project Name That Should be Hidden</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
-            </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <img src="./assets/images/sol_clim_1,5_0,2_0,05_pyth.png" class="project-image">
+		<div class="project-card-text-container">
+		  <div class="subheader-text project-title">Thermal study of the atmospheric re-entry of a space launcher</div>
+		  <div class="body-text project-card-text">
+		    Modeled the thermal behavior of spaceships (based on Ariane 5 and Orion) during atmospheric re-entry using the finite element method. Simulations were performed with FreeFem to solve heat transfer equations. Python was used for optimisation and visualization.
+		  </div>
+		</div>
+            <a class="button" href="./project-pages/project-spaceship.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
