--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
           <div class="project-card">
             <img src="./assets/images/desktop.jpeg" class="project-image">
 		<div class="project-card-text-container">
-		  <div class="subheader-text project-title">Local LLM Assistant for PDF Analysis</div>
+		  <div class="subheader-text project-title">Local LLM with RAG</div>
 		  <div class="body-text project-card-text">
-		    Created a local PDF assistant using Python, TinyLlama, and Sentence Transformers. It extracts text, generates embeddings, and answers questions about PDF content—all offline without external APIs.
+		    Created a local PDF assistant using Python, TinyLlama, and Sentence Transformers. 
 		  </div>
 		</div>
             <a class="button" href="./project-pages/project-llm.html">
@@ -145,9 +145,9 @@
           <div class="project-card">
             <img src="./assets/images/memoire_miniature.png" class="project-image">
 		<div class="project-card-text-container">
-		  <div class="subheader-text project-title">Master 1 Research Thesis: Population Dynamics Modeling</div>
+		  <div class="subheader-text project-title">Population Dynamics Modeling</div>
 		  <div class="body-text project-card-text">
-		    Developed and analyzed mathematical models of population dynamics using Volterra-Lotka predator-prey equations coupled with the Verhulst logistic growth model. Applied stability analysis of equilibrium points and simulated scenarios to assess the impact of environmental and fishing pressures.
+		    Developed and analyzed mathematical models of population dynamics using Volterra-Lotka predator-prey equations.
 		    Tools used included Python for numerical simulations and visualization.
 		  </div>
 		</div>
@@ -160,9 +160,9 @@
           <div class="project-card">
             <img src="./assets/images/sol_clim_1,5_0,2_0,05_pyth.png" class="project-image">
 		<div class="project-card-text-container">
-		  <div class="subheader-text project-title">Thermal study of the atmospheric re-entry of a space launcher</div>
+		  <div class="subheader-text project-title">Thermal study (FEM)</div>
 		  <div class="body-text project-card-text">
-		    Modeled the thermal behavior of spaceships (based on Ariane 5 and Orion) during atmospheric re-entry using the finite element method. Simulations were performed with FreeFem to solve heat transfer equations. Python was used for optimisation and visualization.
+		    Modeled the thermal behavior of spaceships during atmospheric re-entry using the finite element method.
 		  </div>
 		</div>
             <a class="button" href="./project-pages/project-spaceship.html">
