--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@
           <div class="project-card">
             <img src="./assets/images/memoire_miniature.png" class="project-image">
 		<div class="project-card-text-container">
-		  <div class="subheader-text project-title">Population Dynamics Modeling</div>
+		  <div class="subheader-text project-title">Population Dynamics</div>
 		  <div class="body-text project-card-text">
-		    Developed and analyzed mathematical models of population dynamics using Volterra-Lotka predator-prey equations.
-		    Tools used included Python for numerical simulations and visualization.
+		    Developed and analyzed mathematical models of population dynamics.
 		  </div>
 		</div>
             <a class="button" href="./project-pages/project-memoire.html">
