--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		<div class="project-card-text-container">
 		  <div class="subheader-text project-title">Population Dynamics</div>
 		  <div class="body-text project-card-text">
-		    Developed and analyzed mathematical models of population dynamics.
+		    Analyzed mathematical models of population dynamics (Volterra-Lotka and Verhulst models)
 		  </div>
 		</div>
             <a class="button" href="./project-pages/project-memoire.html">
