--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	  </div>
 		
           <div class="body-text">
-		If you would like to discuss, request my CV, or simply connect, please feel free to reach out via email. I look forward to hearing from you.
+		If you would like to connect, request my CV or learn more about my projects, please feel free to reach out via email.
 	  </div>
 		
         </div>
