Add new images and update project HTML pages

--- a/project-pages/project-memoire.html
+++ b/project-pages/project-memoire.html
@@ -68,10 +68,12 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+      <div class="main-title">Population Dynamics Models</div>
+      <div class="body-text" style="text-align: justify;">
+        An in-depth exploration of predator-prey and logistic growth models through differential equations, combining mathematical analysis with computational simulations in Python. Discover how equilibrium points and phase portraits reveal the complexities of ecological systems and inform sustainable resource management.
       </div>
+      <image class="project-header-image" src="../assets/images/desktop.jpeg">
+
 
       <!-- PROJECT DETAILS -->
       <!-- 
@@ -82,9 +84,16 @@
       -->
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
-        <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+        <div class="project-details-content" style="text-align: justify;">
+          <div class="body-text">
+            This project was my research paper (mémoire) for the end of the first year of Master's (M1). It involved a detailed mathematical study of classical population dynamics models, focusing on the Volterra-Lotka predator-prey system and the Verhulst logistic growth equation. I manually calculated the equilibrium points and analyzed their stability to deeply understand the system behavior.
+          </div>
+          <div class="body-text">
+            To complement the theoretical work, I implemented numerical simulations and phase portrait visualizations using Python. These computational models were essential to validate my analytical results and supported the development of an original hybrid model combining predator-prey interactions with logistic growth, further explored through simulations.
+          </div>
+          <div class="body-text">
+            This project significantly enhanced my knowledge of differential equations and provided me with my first hands-on experience in population dynamics modeling. The work culminated in a comprehensive report of over 50 pages detailing the theoretical and practical insights gained.
+          </div>
         </div>
       </div>
 
