Modif des projets

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/desktop.jpeg" class="project-image">
+            <img src="./assets/images/code.jpeg" class="project-image">
 		<div class="project-card-text-container">
 		  <div class="subheader-text project-title">Local LLM with RAG</div>
 		  <div class="body-text project-card-text">
