--- a/project-pages/project-llm.html
+++ b/project-pages/project-llm.html
@@ -68,30 +68,33 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+      <div class="main-title">AI and Digital Payment Security - White Paper Update</div>
+      <div class="body-text" style="text-align: justify;">
+        Contribution to the update of a white paper on Artificial Intelligence for securing digital payment systems, under the supervision of my internship advisor, Florence GIULIANO. A deep dive into LLMs, GenAI, and regulatory frameworks.
       </div>
+
 
       <!-- PROJECT DETAILS -->
-      <!-- 
-        TODO
-
-        - Change the 'subheader-text' to whatever header you want for project details
-        - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
-      -->
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
-        <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+        <div class="project-details-content" style="text-align: justify;">
+          <div class="body-text">
+            This project was completed during my master’s (M2) internship. It involved updating a white paper centered on Artificial Intelligence applied to the security of digital payment systems. My main contribution was the detailed drafting of sections covering AI fundamentals, including large language models (LLMs), generative AI (GenAI), and the regulatory environment shaped by the AI Act.
+          </div>
+          <div class="body-text">
+            I addressed key ethical and regulatory challenges such as algorithmic bias, personal data privacy, and compliance with GDPR. I conducted research on innovative data approaches like synthetic data generation and federated learning to mitigate these issues. Additionally, I detailed fine-tuning techniques such as LoRA and RAG, which enable efficient adaptation of LLMs to specific use cases while controlling computational costs.
+          </div>
+          <div class="body-text">
+            Parallel to the writing, I developed a prototype conversational agent built on a local LLM capable of answering user questions by semantically searching PDFs. This hands-on experience enhanced my understanding of LLM internals and strengthened my programming skills. I presented the project to an internal team.
+          </div>
         </div>
       </div>
+
 
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <div class="subheader-text">Image Gallery</div>
+        <!-- <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
             <!-- 
               TODO
@@ -116,18 +119,7 @@
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
-            <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
+
         </div>
       </div>
     </div>
