--- a/project-pages/project-spaceship.html
+++ b/project-pages/project-spaceship.html
@@ -13,6 +13,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+    <script>
+      MathJax = {
+        tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] }
+      };
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 		<meta charset="utf-8">
     <!-- 
       TODO
@@ -72,11 +79,8 @@
         <div class="body-text" style="text-align: justify;">An in-depth exploration of heat distribution on a re-entry rocket,
            modeled using the Finite Element Method and variational formulation.
             This project blends theoretical mathematics and numerical matrix computations to solve partial differential equations describing thermal behavior.
-            Implemented with FreeFEM and Python.</div>
-        <img class="project-header-image" src="../assets/images/ariane5_croquis.jpeg" alt="Orion dimensions" style="display: block; margin: 0 auto; width: 500px; height: auto;">
-
-
-      </div>
+            Implemented with FreeFEM and Python.
+        </div>
 
       <!-- PROJECT DETAILS -->
       <!-- 
@@ -89,20 +93,30 @@
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content" style="text-align: justify;">
           <div class="body-text">
-            During my first-year master’s project, I studied the thermal behavior inside two rockets astronaut capsule during atmospheric re-entry. The objective was to model and simulate the temperature distribution <i>u(x)</i> within the rocket structure by solving a partial differential equation that describes heat propagation with mixed boundary conditions (Neumann, Dirichlet, and Fourier-Robin).
+            During my first-year master’s project, I studied the thermal behavior inside a rocket's astronaut capsule during atmospheric re-entry. The objective was to model and simulate the temperature distribution $u(x)$ within the rocket structure by solving a partial differential equation that describes heat propagation with mixed boundary conditions (Neumann, Dirichlet, and Fourier-Robin).
           </div>
           <div class="body-text">
             I learned to code numerical matrix analysis in Python, where I implemented finite element discretizations and solved large sparse linear systems resulting from the variational formulation of the PDE. The variational formulation was done using FreeFEM, a specialized C-based software for solving PDEs with finite elements.
           </div>
           <div class="body-text">
-            The core PDE was:
+            The core PDE system was:
             <div class="body-text" style="text-align: center;">
-              −div(𝐾<sub>a</sub> ∇u) = f(x,y) in Ω,
+              $$
+              \left\{
+              \begin{array}{ll}
+                -\nabla \cdot (K_a \nabla u) = f(x, y) & \text{in } \Omega, \\\\
+                -K_a \frac{\partial u}{\partial \vec{n}} = 0 & \text{on } \Gamma_N \quad \text{(Neumann condition)}, \\\\
+                -K_a \frac{\partial u}{\partial \vec{n}} = \alpha (u - u_E) & \text{on } \Gamma_F \quad \text{(Fourier-Robin condition)}, \\\\
+                u = u_D & \text{on } \Gamma_D \quad \text{(Dirichlet condition)}.
+              \end{array}
+              \right.
+              $$
             </div>
-            with boundary conditions involving thermal conductivity <i>𝐾<sub>a</sub></i>, heat source <i>f</i>, and heat transfer coefficients <i>𝛼</i> and <i>𝛽</i>. The Fourier-Robin condition, in particular, allowed modeling convective heat exchange on some boundaries, and by varying the heat transfer coefficient <i>𝛽</i>, I showed how it converges to a Dirichlet condition.
+            This system models heat propagation within the rocket’s structure during atmospheric re-entry. Here, $K_a$ denotes the thermal conductivity of air (e.g., $K_a = 0.026 \,\mathrm{W \cdot m^{-1} \cdot K^{-1}}$), $f(x, y)$ is an internal heat source such as air conditioning, and $\alpha$ is the heat transfer coefficient on the convective boundary $\Gamma_F$. The Fourier-Robin condition was particularly useful in simulating convective heat exchange with the environment. I showed that as $\alpha$ increases, the condition approximates a Dirichlet boundary.
           </div>
+
           <div class="body-text">
-            I formulated the problem variationally and discretized it into a linear system <i>𝐴𝑈 = 𝐹</i>, where <i>𝐴</i> is symmetric positive definite and sparse. This structure enabled the use of efficient solvers such as the Cholesky decomposition and the conjugate gradient method.
+            I formulated the problem variationally and discretized it into a linear system $AU = F$, where $A$ is symmetric positive definite and sparse. This structure enabled the use of efficient solvers such as the Cholesky decomposition and the conjugate gradient method.
           </div>
           <div class="body-text">
             To better understand the physical phenomena and the sensitivity of the system, I performed simulations by varying parameters such as the thickness of the thermal shield, the speed of the rocket, and the external temperature. These simulations allowed me to identify which parameters most strongly influence the internal temperature distribution and the effectiveness of the thermal shield.
@@ -112,6 +126,7 @@
           </div>
         </div>
       </div>
+
 
 
       <!-- IMAGE GALLERY -->
@@ -142,24 +157,19 @@
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-<center>
-  <table>
-    <tr>
-      <td><img src="../assets/images/schema_fusee.png" width="475"></td>
-      <td><img src="../assets/images/maillage.PNG" width="475"></td>
-    </tr>
-    <tr>
-      <!-- <td colspan="2" align="center">Rocket schematic and mesh generated with FreeFEM</td> -->
-    </tr>
-  </table>
-</center>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/schema_fusee.png" class="gallery-image">
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/maillage.PNG" class="gallery-image">
+            </div>
 
-            <div style="width: 100%;">
-              <img src="../assets/images/sol_clim_1,5_0,2_0,05_pyth.png" 
-                  style="width: 500px; height: auto; display: block; margin: 0 auto;">
-              <span class="image-caption" style="display: block; text-align: center; margin-top: 8px;">
-                Rocket schematic and mesh generated with FreeFEM, simulation of heat distribution 
-              </span>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/sol_clim_1,5_0,2_0,05_pyth.png" class="gallery-image">
+            </div>
+
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/sol_clim1,5_0,2_0,05.PNG" class="gallery-image">
             </div>
         </div>
       </div>
