--- a/project-pages/project-spaceship.html
+++ b/project-pages/project-spaceship.html
@@ -104,10 +104,10 @@
               $$
               \left\{
               \begin{array}{ll}
-                -\nabla \cdot (K_a \nabla u) = f(x, y) & \text{in } \Omega, \\\\
-                -K_a \frac{\partial u}{\partial \vec{n}} = 0 & \text{on } \Gamma_N \quad \text{(Neumann condition)}, \\\\
-                -K_a \frac{\partial u}{\partial \vec{n}} = \alpha (u - u_E) & \text{on } \Gamma_F \quad \text{(Fourier-Robin condition)}, \\\\
-                u = u_D & \text{on } \Gamma_D \quad \text{(Dirichlet condition)}.
+                -\nabla \cdot (K_a \nabla u) = f(x, y) & \text{in } \Omega \\\\
+                -K_a \frac{\partial u}{\partial \vec{n}} = 0 & \text{on } \Gamma_N \quad \text{(Neumann condition)} \\\\
+                -K_a \frac{\partial u}{\partial \vec{n}} = \alpha (u - u_E) & \text{on } \Gamma_F \quad \text{(Fourier-Robin condition)} \\\\
+                u = u_D & \text{on } \Gamma_D \quad \text{(Dirichlet condition)}
               \end{array}
               \right.
               $$
