--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm Julien PHAM.</span>
-              <div class="body-text">I’m a Data Scientist. I’m naturally curious and enjoy learning new things every day.</div>
+              <div class="body-text">I’m a Data Scientist based in Paris, France. I’m naturally curious and enjoy learning new things every day.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
