--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 	  </div>
 
 	  <div class="body-text">
-      		This portfolio presents a selection of projects that I am particularly proud of, reflecting both my technical abilities and my passion for solving complex problems.  
+      		This portfolio presents a selection of projects that reflects both my technical abilities and my passion for solving complex problems.  
 	  </div>
 		
           <div class="body-text">
-		If you would like to connect, request my CV or learn more about my projects, please feel free to reach out via email.
+		If you would like to connect, request my resume or learn more about my projects, please feel free to reach out via email.
 	  </div>
 		
         </div>
