--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         - Add paragraphs using the <div class="body-text"></div> elements in the "about-section-content"
       -->
       <div id="about-section">
-        <span class="subheader-text">My Background / About Me</span>
+        <span class="subheader-text">About Me</span>
         <div class="about-section-content">
           <div class="body-text">
 		I hold a Master’s degree in Applied Mathematics, where I developed a strong foundation in analytical thinking, modeling, and statistical methods.  
@@ -103,7 +103,7 @@
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
         <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-        <span class="subheader-text">My Work / My Projects</span>
+        <span class="subheader-text">My Projects</span>
 
         <div class="projects-container">
           <!-- 
@@ -129,11 +129,11 @@
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/code.jpeg" class="project-image">
+            <img src="./assets/images/innovate_pres_cropped.jpg" class="project-image">
 		<div class="project-card-text-container">
-		  <div class="subheader-text project-title">Local LLM with RAG</div>
+		  <div class="subheader-text project-title">White paper on AI & fraud</div>
 		  <div class="body-text project-card-text">
-		    Created a local PDF assistant using Python, TinyLlama, and Sentence Transformers. 
+		    Wrote and presented a white paper on AI and digital payment security 
 		  </div>
 		</div>
             <a class="button" href="./project-pages/project-llm.html">
@@ -161,7 +161,7 @@
 		<div class="project-card-text-container">
 		  <div class="subheader-text project-title">Thermal study (FEM)</div>
 		  <div class="body-text project-card-text">
-		    Modeled the thermal behavior of spaceships during atmospheric re-entry using the finite element method.
+		    Modeled the thermal behavior of spaceships using the finite element method
 		  </div>
 		</div>
             <a class="button" href="./project-pages/project-spaceship.html">
