--- a/project-pages/project-llm.html
+++ b/project-pages/project-llm.html
@@ -79,22 +79,26 @@
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content" style="text-align: justify;">
           <div class="body-text">
-            This project was completed during my master’s (M2) internship. It involved updating a white paper centered on Artificial Intelligence applied to the security of digital payment systems. My main contribution was the detailed drafting of sections covering AI fundamentals, including large language models (LLMs), generative AI (GenAI), and the regulatory environment shaped by the AI Act.
+            This project was completed during my master’s (M2) internship. It involved updating a white paper led by my supervisor Florence, focusing on Artificial Intelligence applied to the security of digital payment systems. My main contribution was the detailed drafting of sections covering AI fundamentals, including large language models (LLMs), generative AI (GenAI), and the regulatory landscape shaped by the AI Act.
           </div>
           <div class="body-text">
-            I addressed key ethical and regulatory challenges such as algorithmic bias, personal data privacy, and compliance with GDPR. I conducted research on innovative data approaches like synthetic data generation and federated learning to mitigate these issues. Additionally, I detailed fine-tuning techniques such as LoRA and RAG, which enable efficient adaptation of LLMs to specific use cases while controlling computational costs.
+            I addressed key ethical and regulatory challenges such as algorithmic bias, personal data privacy, and compliance with GDPR. I conducted research on innovative solutions like synthetic data generation and federated learning to mitigate these issues. I also introduced fine-tuning techniques such as LoRA and RAG, which allow for adapting LLMs to specific use cases while keeping computational costs low.
           </div>
           <div class="body-text">
-            Parallel to the writing, I developed a prototype conversational agent built on a local LLM capable of answering user questions by semantically searching PDFs. This hands-on experience enhanced my understanding of LLM internals and strengthened my programming skills. I presented the project to an internal team.
+            Alongside the writing, I developed a prototype conversational agent based on a local LLM capable of answering user queries by semantically retrieving relevant content from uploaded PDFs. This hands-on project enhanced my understanding of LLM architecture and improved my technical programming skills.
+          </div>
+          <div class="body-text">
+            I had the opportunity to present this work at SAS Innovate On Tour Paris 2025, the largest SAS event in France, with over 280 registered participants. Presenting at this event was a valuable opportunity to share our AI-driven vision for securing digital payments with industry professionals and experts.
           </div>
         </div>
       </div>
 
 
+
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <!-- <div class="subheader-text">Image Gallery</div>
+        <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
             <!-- 
               TODO
@@ -119,11 +123,21 @@
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/innovate_stage.jpg" class="gallery-image">
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/innovate_pres.jpg" class="gallery-image">
+            </div>
         </div>
       </div>
     </div>
 
+    <div style="width: 100%; display: flex; justify-content: center; margin-top: 40px;">
+      <a class="button" href="../index.html">
+        <span class="button-text">Home Page</span>
+      </a>
+    </div>
     <!-- FOOTER -->
     <div id="footer">
       <!-- 
