--- a/project-pages/project-spaceship.html
+++ b/project-pages/project-spaceship.html
@@ -174,7 +174,12 @@
         </div>
       </div>
     </div>
-
+    
+    <div style="width: 100%; display: flex; justify-content: center; margin-top: 40px;">
+      <a class="button" href="../index.html">
+        <span class="button-text">Home Page</span>
+      </a>
+    </div>
     <!-- FOOTER -->
     <div id="footer">
       <!-- 
